mjc1/test/simple.mj
int x;

void f(int x) {
	print(x);
	int y = 2;
	int y = 22;
	int a[];
	a[0] = 1;
	a = 1; // error
	y = 22;
	"a" = "b"; // error
}

void g() {
	x = 3;
}

void main(String args[]) {
	print("Hello\7\012\n\u000c\0");
	f(10);
	g();
	print(x);	// prints 3 (g alters field value)
}

int fact(int x) {
    if (x <= 1) return 1;
    return x * fact(x - 1);
}
